--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1170,3 +1170,133 @@ year = {2006}
   pages =       "95--101",
   URL =         "http://dx.doi.org/10.1162/089120104773633402",
 }
+
+@InProceedings{conf/amcis/Nah03,
+  title =       "A Study on Tolerable Waiting Time: How Long Are Web
+                 Users Willing to Wait?",
+  author =      "Fiona Fui-Hoon Nah",
+  publisher =   "Association for Information Systems",
+  year =        "2003",
+  bibdate =     "2012-01-09",
+  bibsource =   "DBLP, http://dblp.uni-trier.de/db/conf/amcis/amcis2003.html\#Nah03",
+  booktitle =   "AMCIS",
+  \crossref =    "conf/amcis/2003",
+  pages =       "285",
+  \URL =         "http://aisel.aisnet.org/amcis2003/",
+}
+
+@article{myers2000classical,
+  title={Classical and modern regression with applications (Duxbury Classic)},
+  author={Myers, Raymond H},
+  journal={Duxbury Press, Pacific Grove},
+  year={2000}
+}
+
+@Article{journals/ijon/HeeswijkMOL11,
+  title =       "{GPU}-accelerated and parallelized {ELM} ensembles for
+                 large-scale regression",
+  author =      "Mark van Heeswijk and Yoan Miche and Erkki Oja and
+                 Amaury Lendasse",
+  journal =     "Neurocomputing",
+  year =        "2011",
+  number =      "16",
+  volume =      "74",
+  bibdate =     "2011-08-29",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/ijon/ijon74.html#HeeswijkMOL11",
+  pages =       "2430--2437",
+  URL =         "http://dx.doi.org/10.1016/j.neucom.2010.11.034",
+}
+
+@InProceedings{conf/ijcnn/SalperwyckL11,
+  title =       "Learning with few examples: An empirical study on
+                 leading classifiers",
+  author =      "Christophe Salperwyck and Vincent Lemaire",
+  publisher =   "IEEE",
+  year =        "2011",
+  bibdate =     "2012-04-23",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/ijcnn/ijcnn2011.html#SalperwyckL11",
+  booktitle =   "IJCNN",
+  \crossref =    "conf/ijcnn/2011",
+  ISBN =        "978-1-4244-9635-8",
+  pages =       "1010--1019",
+  \URL =         "http://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=6022827",
+}
+
+@article{wolpert1996lack,
+  title={The lack of a priori distinctions between learning algorithms},
+  author={Wolpert, David H},
+  journal={Neural computation},
+  volume={8},
+  number={7},
+  pages={1341--1390},
+  year={1996},
+  publisher={MIT Press}
+}
+
+@InProceedings{conf/icml/KahaviW96,
+  title =       "Bias Plus Variance Decomposition for Zero-One Loss
+                 Functions",
+  author =      "Ron Kohavi and David Wolpert",
+  bibdate =     "2011-12-23",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/icml/icml1996.html#KahaviW96",
+  booktitle =   "ICML",
+  booktitle =   "Machine Learning, Proceedings of the Thirteenth
+                 International Conference ({ICML} '96), Bari, Italy,
+                 July 3-6, 1996",
+  publisher =   "Morgan Kaufmann",
+  year =        "1996",
+  editor =      "Lorenza Saitta",
+  ISBN =        "1-55860-419-7",
+  pages =       "275--283",
+}
+
+@InProceedings{conf/icml/Schaffer94,
+  title =       "A Conservation Law for Generalization Performance",
+  author =      "Cullen Schaffer",
+  bibdate =     "2011-12-23",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/icml/icml1994.html#Schaffer94",
+  booktitle =   "ICML",
+  booktitle =   "Machine Learning, Proceedings of the Eleventh
+                 International Conference, Rutgers University, New
+                 Brunswick, {NJ}, {USA}, July 10-13, 1994",
+  publisher =   "Morgan Kaufmann",
+  year =        "1994",
+  editor =      "William W. Cohen and Haym Hirsh",
+  ISBN =        "1-55860-335-2",
+  pages =       "259--265",
+}
+
+@Book{books/daglib/0022052,
+  title =       "Metalearning - Applications to Data Mining",
+  author =      "Pavel Brazdil and Christophe G. Giraud-Carrier and
+                 Carlos Soares and Ricardo Vilalta",
+  publisher =   "Springer",
+  year =        "2009",
+  bibdate =     "2011-08-25",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/series/cogtech/index.html#0022052",
+  ISBN =        "978-3-540-73262-4",
+  pages =       "I--X, 1--176",
+  series =      "Cognitive Technologies",
+  URL =         "http://dx.doi.org/10.1007/978-3-540-73263-1",
+}
+
+@Article{journals/sigkdd/ZliobaiteBGGGMM12,
+  title =       "Next challenges for adaptive learning systems",
+  author =      "Indre Zliobaite and Albert Bifet and Mohamed Medhat
+                 Gaber and Bogdan Gabrys and Jo{\~a}o Gama and Leandro
+                 L. Minku and Katarzyna Musial",
+  journal =     "SIGKDD Explorations",
+  year =        "2012",
+  number =      "1",
+  volume =      "14",
+  bibdate =     "2014-08-27",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/sigkdd/sigkdd14.html#ZliobaiteBGGGMM12",
+  pages =       "48--55",
+  \URL =         "http://doi.acm.org/10.1145/2408736.2408746",
+}
