--- a/contexto.tex
+++ b/contexto.tex
@@ -68,6 +68,9 @@ $TU$ utilidade de treinamento
 $Inf(\bm{x})$ medida de informatividade
 $d(\bm{x},\bm{u})$ medida de distância
 $sim(\bm{x},\bm{u})$ medida de similaridade
+$\cent$ orçamento ou número de consultas
+
+\tar{explicar usos de rótulo e classe}
 
 \red{explicar que vai ser adotada uma notação uniforme que compreenda AL, ELM
  e ap. inc.}
