--- a/dataset-tables.tex
+++ b/dataset-tables.tex
@@ -238,3 +238,49 @@
 \label{tab:n}
 \end{center}
 \end{table}
+\begin{table}[h]
+\caption{Bases de dados com menos exemplos.}
+\begin{center}
+\begin{tabular}{l|r r r r r r}
+ & \rotatebox{0}{$|\mathcal{U}|$} & \rotatebox{0}{$|Y|$} & \rotatebox{0}{atributos} & \rotatebox{0}{nominais} & \rotatebox{0}{\makecell{majoritária\\(\%)}} & \rotatebox{0}{\makecell{minoritária\\(\%)}}\\ \hline 18-dbworld subjects & 50 & 2 & 242 & 242 &  55.6 &  44.4\\
+53-robot failure lp1 & 70 & 4 & 90 & 0 &  38.6 &  18.2\\
+33-leukemia haslinger & 80 & 2 & 50 & 0 &  51.0 &  49.0\\\hline
+36-molecular promotor... & 85 & 2 & 57 & 57 &  50.0 &  50.0\\
+71-teaching assistant... & 85 & 3 & 5 & 2 &  35.8 &  32.1\\
+54-robot failure lp4 & 93 & 3 & 90 & 0 &  61.2 &  18.1\\\hline
+30-iris & 118 & 3 & 4 & 0 &  34.0 &  32.7\\
+25-hepatitis & 124 & 2 & 19 & 13 &  79.4 &  20.6\\
+55-robot failure lp5 & 130 & 5 & 90 & 0 &  27.8 &  13.0\\\hline
+50-planning relax & 141 & 2 & 12 & 0 &  71.6 &  28.4\\
+92-wine & 142 & 3 & 13 & 0 &  39.9 &  27.0\\
+47-parkinsons & 156 & 2 & 22 & 0 &  75.4 &  24.6\\\hline
+2-arcene & 160 & 2 & 998 & 0 &  56.0 &  44.0\\
+15-connect. mines vs... & 166 & 2 & 60 & 0 &  53.4 &  46.6\\
+58-seeds & 168 & 3 & 7 & 0 &  33.3 &  33.3\\\hline
+21-glass & 170 & 6 & 9 & 0 &  35.7 &   4.2\\
+74-thyroid newthyroid & 172 & 3 & 5 & 0 &  69.8 &  14.0\\
+61-spect heart & 178 & 2 & 22 & 22 &  55.9 &  44.1\\\hline
+42-movement libras 10 & 192 & 15 & 90 & 0 &   7.5 &   6.3\\
+62-spectf heart & 214 & 2 & 44 & 0 &  79.4 &  20.6\\
+65-statlog heart & 216 & 2 & 13 & 0 &  55.6 &  44.4\\\hline
+87-voting & 223 & 2 & 16 & 16 &  67.0 &  33.0\\
+22-habermans survival & 226 & 2 & 3 & 0 &  72.1 &  27.9\\
+24-heart disease hung... & 234 & 2 & 13 & 0 &  63.8 &  36.2\\\hline
+27-horse colic surgic... & 240 & 2 & 27 & 14 &  63.7 &  36.3\\
+23-heart disease clev... & 242 & 5 & 13 & 2 &  54.1 &   4.3\\
+81-vertebra column 2c & 248 & 2 & 6 & 0 &  67.7 &  32.3\\\hline
+82-vertebra column 3c & 248 & 3 & 6 & 0 &  48.4 &  19.4\\
+41-movement libras & 264 & 15 & 90 & 0 &   7.3 &   6.4\\
+32-leaf & 272 & 30 & 15 & 0 &   4.7 &   2.4\\\hline
+10-bupa & 273 & 2 & 6 & 0 &  58.4 &  41.6\\
+29-ionosphere & 280 & 2 & 33 & 0 &  64.3 &  35.7\\
+80-user knowledge & 322 & 5 & 5 & 0 &  32.0 &   6.0\\\hline
+20-flare & 337 & 6 & 12 & 2 &  31.4 &   7.6\\
+38-monks1 & 346 & 2 & 6 & 0 &  50.0 &  50.0\\
+39-monks2 & 346 & 2 & 6 & 6 &  67.1 &  32.9\\\hline
+40-monks3 & 346 & 2 & 6 & 0 &  53.0 &  47.0\\
+90-wholesale channel & 352 & 2 & 7 & 0 &  67.7 &  32.3\\
+57-saheart & 370 & 2 & 9 & 1 &  65.4 &  34.6\\\hline\end{tabular}
+\label{tab:nm}
+\end{center}
+\end{table}
