--- a/exp-elm.tex
+++ b/exp-elm.tex
@@ -12,6 +12,8 @@ explorar resultados separadamente pra cada tipo de ELM}
 \tar{ impossível completar todas as bases, mas ok;
 quanto mais memória, mais datasets}
 
+\ano{ELM ainda não sabe lidar com exemplos ponderados! (necessário para SGmulti*)}
+
 \subsection{I-ELM interativa}
 
 As propostas incrementais para IELM e CIELM mostraram-se
