--- a/meta.tex
+++ b/meta.tex
@@ -1,28 +1,18 @@
 \section{Meta-aprendizado} \label{meta}
+Um sistema de classificação baseado em aprendizado de máquina depende
+de um modelo que é induzido por algoritmos de aprendizado.
+\ano{citar seção/cap de contexto?}
+Diante da infinidade de vieses possíveis de aprendizado,
+muitos algoritmos têm sido propostos e são frequentemente
+empregados de forma generalizada na solução dos mais diversos problemas,
+como é o caso das redes neurais \citep{haykin2004comprehensive}.
+Entretanto,
+\cite{conf/icml/Schaffer94} provou formalmente que
+um desempenho positivo em algumas situações de aprendizado
+precisa ser compensado por um igual grau de desempenho negativo
+em outras.
+% \cite{wolpert1996lack},
 
-teoria
+\citep{books/daglib/0022052}
 
-\ano{diferenciar do meta-aprendizado ativo do Prudêncio}
 
-\ano{recomendação de estratégia para base,
-budget e aprendiz dados [e qtd inicial de rótulos?]}
-
-\ano{escolhe uma dentre várias}
-
-\ano{escolhe cada uma contra random}
-
-\ano{mostra quando random é a melhor (interessante)}
-
-\ano{mostra quando random é a melhor ou empata}
-
-\ano{recomendação de aprendiz
-(NB,C45,etc. e ''não-use essa estrat.'' ou ''use aleatório'')
-para uma dada estratégia}
-
-\tar{metaap pra decidir entre AG, LU ou TU}
-
-\tar{carac. dos classifs como metafeature:
-\begin{itemize}
- \item sharp ou soft (alternativa: entropia média das predições)
-\end{itemize}
-}
