--- a/tese.tex
+++ b/tese.tex
@@ -3,6 +3,7 @@
 % \usepackage[pdftex]{graphicx}
 % \usepackage{array}
 \usepackage{amsmath}
+\usepackage{wasysym}
 
 % \usepackage{bm}
 % \usepackage{stmaryrd}
