--- a/elm.tex
+++ b/elm.tex
@@ -34,11 +34,12 @@ cujos nós podem ser neurais (aditivo logístico sigmoidal) - como neste trabalho 
 ou de diversos outros tipos, como as também frequentemente usadas funções de base radial
 \citep{journals/tsmc/HuangZDZ12}.
 
-Dados $Y$ o conjunto de vetores que representam todos os rótulos possíveis;
+Dados $Y$ o conjunto de vetores que representam todas as classes possíveis;
 $\bm{x}_{(t)}$, um vetor de atributos descritivos pertencentes a um exemplo cuja classe se deseja
 descobrir no instante $t \in \mathbb{N}$;
-e $\bm{y}_{(t)} \in Y$, seu vetor associado de atributos preditivos que é uma representação binária
-em que os valores respeitam a restrição de que para um rótulo com índice correspondente $o$,
+e $\bm{y}_{(t)} \in Y$, seu vetor associado de atributos preditivos que é uma representação
+binária em que os valores respeitam a restrição de que para uma classe com
+índice correspondente $o$,
 $y_o=1$ e $y_p=0 \forall o \neq p, 1 \leq p \leq |Y|$;
 a função preditiva de uma SLFN com $L$ neurônios ocultos pode ser representada como segue:
 \begin{equation} \label{eqelm}
@@ -48,8 +49,8 @@ g(\bm{a}_l \bm{x}_{(t)} + b_l)} = \bm{y}_{(t)}
 % }, \quad j=1, \cdots, {\it N}.
 
 onde $\beta_{l,o}$ é o peso da sinapse que conecta o neurônio oculto $l$ ao neurônio de saída $o$;
-$c(\bm{z})$ é uma função auxiliar que retorna o índice correspondente ao rótulo representado pelo
-vetor $\bm{z} \in Y$;
+$c(\bm{z})$ é uma função auxiliar que retorna o índice correspondente à classe
+representado pelo vetor $\bm{z} \in Y$;
 $g$ é, neste trabalho, a função sigmoide logística;
 $\bm{a}_l$ é o vetor de pesos do neurônio $l$ com cada valor $a_i$ representando o peso entre a
 entrada $i$ e o neurônio $l$ e, sendo o produto interno deste neurônio uma equação de reta no
@@ -67,8 +68,8 @@ ou seja, cada coluna corresponde à saída de um neurônio oculto e cada linha corr
 exemplo do conjunto de treinamento;
 $\beta$ é a matriz contendo os pesos que conectam a camada oculta à camada de saída, ou seja, cada
 coluna corresponde a um neurônio de saída e cada linha corresponde a um neurônio oculto;
-e $T$ é a matriz objetivo, que contém em cada linha a representação binária $\bm{y}$ do rótulo de
-cada exemplo.
+e $T$ é a matriz objetivo, que contém em cada linha a
+representação binária $\bm{y}$ da classe de cada exemplo.
 
 Calcular $\beta$, que é análogo a treinar a rede,
 pode ser feito por meio do cálculo da pseudo-inversa $H^{\dagger}$ de $H$
@@ -78,6 +79,19 @@ pode ser feito por meio do cálculo da pseudo-inversa $H^{\dagger}$ de $H$
 \end{equation}
 
 \tar{concluir mais gentilmente}
+
+\ano{ELM ajuda a reduzir overfitting com pequenas normas dos pesos.}
+
+\tar {necessario apresentar versao multiclasse do press que precisei desenvolver}
+
+referencias para press \citep{myers2000classical};
+\citep{journals/ijon/HeeswijkMOL11}
+refaz ELM (jeito antigo, sem lumda)  a cada grow e chama de eficiente.
+posso usar esse como ponto de partida, mas não por na GPU porque:
+1-AL tem pequenos cjtos de teste(rotulos); 2-overhead entre grows é
+ainda maior por ser um crescimento ``incremental''.
+o calculo do HAT vem de graça da EM-ELM que eles esqueceram de adotar.
+
 
 \subsection{OS-ELM}\label{oselm}
 Em sistemas interativos, frequentemente é adotado o esquema incremental de aprendizado.
@@ -140,6 +154,17 @@ pseudo-inversa para cada novo lote de dados.
 \ano{PRESS: erro estatistico (de regressão?)}
 
 \ano{quadrado do resíduo: erro I e CI?}
+
+diferencia 'statistical error' e 'residual':
+
+{http://en.wikipedia.org/wiki/Errors\_and\_residuals\_in\_statistics}
+
+error (or disturbance) of an observed value is the deviation of the observed value from
+the (unobservable) true function value
+residual of an observed value is the difference between the observed value and the
+estimated function value.
+
+\tar{Citar von Zuben e outros brasileiros}
 
 \subsection{I-ELM}
 Apesar da vantagem do cálculo da pseudo-inversa ser uma etapa única no
