--- a/exp-meta.tex
+++ b/exp-meta.tex
@@ -1,6 +1,14 @@
 \chapter{Aprendizado Meta-ativo}\label{aml}
+\tar{rodei meta multirrotulo pra vários metaclassif:
+c45=0.50 Maj=0.46}
+
+\tar{vou rodar meta monorrotulo pra vários metaclassif com trios lea-bud-dataset sem
+roubar:
+c45=0.19 Maj=0.14}
+
 \ano{resume livro de meta-ap.; cita Marcilio, statlog;
-falar do desafio de nao usar informacoes sobre os rotulos (classes) nas metafeatures}
+falar do desafio de nao usar informacoes sobre as classes nas metafeatures
+que existe em metaAL e não em metaPassiveL}
 
 \ano{como a predição da melhor não vence a majoritaria preciso usar ranking
 (ainda posso testar algumas variações, como fixar
@@ -23,7 +31,42 @@ ele seria treinado com a sequencia otima de exemplos-transformados de
 cada base: os primeiros seriam os positivos e últimos seriam os negativos.
 )}
 
-\subsection{Meta-estratégia}
+\tar{meta-aprendizado pra recomendar quando não usar pode ter maior acurácia.}
+
+\ano{diferenciar do meta-aprendizado ativo do Prudêncio}
+
+Multiarmed bandit problem
+http://www.ualberta.ca/~szepesva/Thesis/varun08.thesis.pdf
+
+\section{Recomendação de estratégias}
+
+\ano{recomendação de estratégia para base,
+budget e aprendiz dados [e qtd inicial de rótulos?]}
+
+\ano{escolhe uma dentre várias}
+
+\ano{escolhe cada uma contra random}
+
+\ano{mostra quando random é a melhor (interessante)}
+
+\ano{mostra quando random é a melhor ou empata}
+
+\ano{recomendação de aprendiz
+(NB,C45,etc. e ''não-use essa estrat.'' ou ''use aleatório'')
+para uma dada estratégia}
+
+\tar{metaap pra decidir entre AG, LU ou TU}
+
+\tar{carac. dos classifs como metafeature:
+\begin{itemize}
+ \item sharp ou soft (alternativa: entropia média das predições)
+\end{itemize}
+}
+
+\ano{sucesso garantido: recomendar strat por tempo de consulta estimado.
+seria muito óbvio?}
+
+\section{Meta-estratégia}
 \ano{\citep{conf/ijcnn/SoutoPSACLS08}, sobre clustering,
 usam ranking médio como default:
 Method SRC
@@ -48,6 +91,14 @@ que sorteia N exemplos para todas as estratégias
 Evita a influência das diferenças ruidosas no início das curvas de aprendizado.
 Ajuda DW e também ajuda ClusterBased, cuja implementação não aproveita os rótulos iniciais (e pode dispensar a etapa inicial).
 Porém, qto maios exemplos, mais as estratégias se aproximam de Random Sampling.}
+
+tese kalousis: The first attempt to characterize datasets in order to predict the performance of classication algorithms was done by Rendell et al. (1987).
+
+tese bruno feres:
+
+
+\section{Experimentos e Resultados}
+\ano{citar programa R para a extração de parte dos meta-atributos \citep{team2010r}}
 
 \section{Considerações}
 liga com próximo capítulo apontando para as propostas de estratégias e de metaap.;
