--- a/experimentos.tex
+++ b/experimentos.tex
@@ -1,5 +1,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Experimentos e Resultados}\label{experimentos}
+
+\ano{para selecionar das variantes da literatura apenas as melhores fazer mini friedman
+para: unc,ent,mar,eer,dwtus}
+
+x Qual a economia proporcionada por uma estratégia?
+
+x Quão bem uma estratégia usufrui de um dado orçamento?
+
 AG,LU vs DWTU
 
 \tar{há alguma correlação entre desempenho de AL e desbalanceamento da base?}
